# Memoria

./: .editorconfig  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Containerfile  README.md  compose.yaml  hatch_build.py  pyproject.toml
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: deploy-image.yml  python-publish.yml
docs/: Plugin Development.md
src/memoria/: __about__.py  __init__.py  __main__.py  allowlist.py  db_clients.py  downloader.py  elasticsearch.py  env.py  history.py  html.py  settings.py  tasks.py  util.py
src/memoria/logic/: allowlist.py  history.py  preview.py  search.py  source.py
src/memoria/model/: allowlist.py  history.py  history_db.py  imported_history.py  page.py  plugins.py  search_result.py  source.py
src/memoria/model/orm/: __init__.py  allowlist.py  configured_source.py  history.py  page.py
src/memoria/plugins/: __init__.py  _allowlist_manager.py  _ipv6_regex.py  _plugin_suite.py  _processing_manager.py  _source_manager.py  allowlist.py  base.py  downloader.py  extractor.py  filter.py  processing.py  source.py
src/memoria/plugins/builtin/: aiohttp_downloader.py  firefox_sync_client_source.py  html_content_finder.py  html_extractor.py  prefix_allowlistrule.py  regex_allowlistrule.py
src/memoria/web/: __init__.py  __main__.py  db_dependencies.py  dependencies.py  lifecycle.py
src/memoria/web/routes/: __init__.py  about.py  history.py  index.py  settings.py
src/memoria/web/routes/api/: __init__.py  allowlist.py  allowlist_rules.py  denylist.py  history.py  preview.py  search.py  source.py  source_ux.py  upload_db.py
src/memoria/web/www/static/: styles.scss
src/memoria/web/www/templates/: _base.html.j2  about.html.j2  allowlist_item.html.j2  allowlist_items.html.j2  allowlist_rule.html.j2  denylist_item.html.j2  denylist_items.html.j2  history.html.j2  history_items.html.j2  index.html.j2  index.scss  macros.html.j2  results.html.j2  settings.html.j2  settings.scss  source_item.html.j2  source_plugins.html.j2  sources_items.html.j2  upload.html.j2
