[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoria-search"
readme = "README.md"
# license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles~=23.2.1",
    "aiohttp~=3.9.5",
    "aiosqlite~=0.20.0",
    "beautifulsoup4~=4.12.3",
    "cron-descriptor~=1.4.3",
    "elasticsearch[async]~=8.13.1",
    "fasthx~=0.2403.1",
    "fastapi~=0.111.0",
    "humanize~=4.9.0",
    "ijson~=3.2.3",
    "pydantic-settings~=2.2.1",
    "python-magic~=0.4.27",
    "rocketry~=2.5.1",
    "SQLAlchemy[asyncio]~=2.0.30",
    "websockets~=12.0"
]
dynamic = ["version", "description", "authors"]

[project.urls]
Repository = "https://github.com/Sidneys1/Memoria"
"Bug Tracker" = "https://github.com/Sidneys1/Memoria/issues"

[project.entry-points.memoria]
AiohttpDownloader = "memoria.plugins.builtin.aiohttp_downloader:AiohttpDownloader"
HtmlContentFinder = "memoria.plugins.builtin.html_content_finder:HtmlContentFinder"
HtmlExtractor = "memoria.plugins.builtin.html_extractor:HtmlExtractor"
PrefixAllowlistRule = "memoria.plugins.builtin.prefix_allowlistrule:PrefixAllowlistRule"
RegexAllowlistRule = "memoria.plugins.builtin.regex_allowlistrule:RegexAllowlistRule"
FirefoxSyncClientSource = "memoria.plugins.builtin.firefox_sync_client_source:FirefoxSyncClientSource"

[project.optional-dependencies]
dev = [
    "hatch",
    "fastapi-cli",
    "isort",
    "mypy",
    "types-aiofiles",
    "types-beautifulsoup4",
]
uvicorn = [
    "uvicorn",
]

[tool.yapf]
"COLUMN_LIMIT" = 120

[tool.hatch]

[tool.hatch.version]
path = "src/memoria/__about__.py"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.vscode/",
    "/.editorconfig",
    "/.github/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memoria"]
exclude = [
    "/.vscode/",
    "/.editorconfig",
    "/Containerfile",
]

[tool.hatch.build.targets.wheel.force-include]
"./src/memoria/web/www/templates/index.css" = "./src/memoria/web/www/templates/index.css"
"./src/memoria/web/www/templates/settings.css" = "./src/memoria/web/www/templates/settings.css"
"./src/memoria/web/www/static/styles.css" = "./src/memoria/web/www/static/styles.css"

[tool.isort]
line_length = 120
ensure_newline_before_comments = true
